# stm32wb55xx-hal

./: Cargo.toml  memory.x
src/: cpu.rs  delay.rs  flash.rs  gpio.rs  i2c.rs  ipcc.rs  lib.rs  macros.rs  prelude.rs  pwr.rs  rcc.rs  signature.rs  time.rs  tl_mbox.rs
src/gpio/: alt.rs  convert.rs
src/pwr/: pxcr.rs
src/rcc/: rec.rs
src/tl_mbox/: acl.rs  ble.rs  channel.rs  cmd.rs  consts.rs  evt.rs  mm.rs  unsafe_linked_list.rs
